[Add] Get Measures method
